--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,51 @@
 .env
 tg.session
-data/oxigraph/store/*
+
+# Ignore data files but keep directory structure
 data/raw/*
+!data/raw/.gitkeep
+
 data/rdf/*
+!data/rdf/.gitkeep
+
+data/oxigraph/store/*
+!data/oxigraph/store/.gitkeep
+
+# Python
+__pycache__/
+*.py[cod]
+*$py.class
+*.so
+.Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+
+# Virtual environments
+.venv/
+venv/
+ENV/
+env/
+
+# IDE
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# OS
+.DS_Store
+Thumbs.db
